--- a/index.html
+++ b/index.html
@@ -37,14 +37,12 @@
       </div>
       <nav class="desktop-main-menu">
         <ul>
-          <li><a href="falcon9.html">Falcon 9</a></li>
-          <li><a href="falcon-heavy.html">Falcon Heavy</a></li>
-          <li><a href="dragon.html">Dragon</a></li>
+          <li><a href="falcon9.html">Mission</a></li>
+          <li><a href="falcon-heavy.html">Progress</a></li>
+          <li><a href="dragon.html">T1</a></li>
           <li><a href="#">Starship</a></li>
-          <li><a href="#">Human Spaceflight</a></li>
-          <li><a href="#">Rideshare</a></li>
-          <li><a href="#">Starlink</a></li>
-          <li><a href="#">Shop</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Join US</a></li>
         </ul>
       </nav>
     </header>
@@ -59,11 +57,11 @@
     <!-- Section A -->
     <section class="section-a">
       <div class="section-inner">
-        <h4>Upcoming Launch</h4>
-        <h2>CRS-25 Mission</h2>
+        <h4>Upcoming Plane</h4>
+        <h2>The T1</h2>
         <a href="#" class="btn">
           <div class="hover"></div>
-          <span>Rewatch</span>
+          <span>Watch the concept</span>
         </a>
       </div>
 
@@ -82,8 +80,8 @@
     <!-- Section B -->
     <section class="section-b">
       <div class="section-inner">
-        <h4>Recent Launch</h4>
-        <h2>Starlink Mission</h2>
+        <h4>Recent Update</h4>
+        <h2>The End Of P:51</h2>
         <a href="#" class="btn">
           <div class="hover"></div>
           <span>Rewatch</span>
@@ -105,11 +103,11 @@
     <!-- Section C -->
     <section class="section-c">
       <div class="section-inner">
-        <h4>Recent Mission</h4>
-        <h2>SES-22 Mission</h2>
+        <h4>Announcing</h4>
+        <h2>The formation of our group</h2>
         <a href="#" class="btn">
           <div class="hover"></div>
-          <span>Rewatch</span>
+          <span>Read the article</span>
         </a>
       </div>
 
@@ -125,10 +123,9 @@
       </div>
     </section>
 
-    <!-- Section D -->
-    <section class="section-d">
+<!-- <section class="section-d">
       <div class="section-inner">
-        <h4>Recent Launch</h4>
+        <h4>Join US</h4>
         <h2>Globalstar FM15 Mission</h2>
         <a href="#" class="btn">
           <div class="hover"></div>
@@ -146,10 +143,9 @@
           ></path>
         </svg>
       </div>
-    </section>
+    </section> -->
 
-    <!-- Section E -->
-    <section class="section-e">
+    <!-- <section class="section-e">
       <div class="section-inner">
         <h2>Starship Update</h2>
         <a href="#" class="btn">
@@ -157,21 +153,9 @@
           <span>Rewatch</span>
         </a>
       </div>
+    </section> -->
 
-      <div class="scroll-arrow">
-        <svg width="30px" height="20px">
-          <path
-            stroke="#ffffff"
-            fill="none"
-            stroke-width="2px"
-            d="M2.000,5.000 L15.000,18.000 L28.000,5.000 "
-          ></path>
-        </svg>
-      </div>
-    </section>
-
-    <!-- Section F -->
-    <section class="section-f">
+    <!-- <section class="section-f">
       <div class="section-inner">
         <h2>Starship to add NASA astronauts on the moon</h2>
         <a href="#" class="btn">
@@ -179,18 +163,15 @@
           <span>Rewatch</span>
         </a>
       </div>
-    </section>
+    </section> -->
+
 
     <footer>
       <ul>
         <li>SpaceX &copy; 2022</li>
-        <li><a href="#">Twitter</a></li>
         <li><a href="#">YouTube</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Flickr</a></li>
-        <li><a href="#">LinkedIn</a></li>
         <li><a href="#">Privacy</a></li>
-        <li><a href="#">Suppliers</a></li>
+        <li><a href="#">Progress</a></li>
       </ul>
     </footer>
   </body>
